AWS_CloudFormation/VPC_EFS - 복사본.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  LatestAmiId:
    Description: (DO NOT CHANGE)
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
    AllowedValues:
      - /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64 

Resources:
  TESTVPC:     #가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: TEST-VPC
          
  TESTIGW:     #VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: TEST-IGW
          
  TESTIGWAttachment:     #IGW를 VPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref TESTIGW
      VpcId: !Ref TESTVPC
  
  TESTPublicSN1:     #Public 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TESTVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SN1

  TESTPublicSN2:     #Public 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TESTVPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SN2
          
  TESTPublicSN3:     #Public 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TESTVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SN3
          
  TESTPublicSN4:     #Public 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TESTVPC
      AvailabilityZone: !Select [ 3, !GetAZs '' ]
      CidrBlock: 10.0.3.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SN4


  TESTPublicRT:     #퍼블릭용 라우팅 테이블 생성
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TESTVPC
      Tags:
        - Key: Name
          Value: TEST-Public-RT
          
  DefaultPublicRoute:     #퍼블릭 RT에 기본 인터넷 경로 추가
    Type: AWS::EC2::Route
    DependsOn: TESTIGWAttachment     #TESTIGWAttachment가 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref TESTPublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref TESTIGW 
  
  TESTPublicSNRouteTableAssociation1:     #Public 서브넷을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TESTPublicRT
      SubnetId: !Ref TESTPublicSN1
      
  TESTPublicSNRouteTableAssociation2:     #Public 서브넷을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TESTPublicRT
      SubnetId: !Ref TESTPublicSN2
      
  TESTPublicSNRouteTableAssociation3:     #Public 서브넷을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TESTPublicRT
      SubnetId: !Ref TESTPublicSN3
      
  TESTPublicSNRouteTableAssociation4:     #Public 서브넷을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref TESTPublicRT
      SubnetId: !Ref TESTPublicSN4
      
  TESTSecurityGroup:     #보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      VpcId: !Ref TESTVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  TESTPublicEC21:     #Public EC2 인스턴스 생성
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: EC2-S3-FullAccess-Role
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: Test-Public-EC2
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref TESTPublicSN1
          GroupSet:
            - !Ref TESTSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
      UserData:     #인스턴스 시작 시 자동으로 실행할 스크립트 root계정 비밀번호 설정후 SSH설정 변경 후 재시작
        Fn::Base64:
          !Sub |
            hostnamectl --static set-hostname Seoul-AWS-WebSrv1     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성
            curl -o /var/www/html/load.php https://cloudneta-book.s3.ap-northeast-2.amazonaws.com/chapter5/load.php --silent     #load 테스트용 PHP 파일 다운로드
            yum install -y php php-cli php-common php-fpm php-mysqlnd php-mbstring
            aws s3 cp s3://zxxnwood /var/www/html/ --recursive  
            
  TESTPublicEC22:     #Public EC2 인스턴스 생성
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: EC2-S3-FullAccess-Role
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: Test-Public-EC2
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref TESTPublicSN2
          GroupSet:
            - !Ref TESTSecurityGroup
          AssociatePublicIpAddress: true     #공인IP할당
      UserData:     #인스턴스 시작 시 자동으로 실행할 스크립트 root계정 비밀번호 설정후 SSH설정 변경 후 재시작
        Fn::Base64:
          !Sub |
            hostnamectl --static set-hostname Seoul-AWS-WebSrv2     #서버 hostname을 Seoul-AWS-WebSrv1로 변경
            cat <<EOT > /etc/profile.d/prompt.sh     #쉘 프롬프트 색상 및 형식 설정
            export PS1="[\[\e[1;31m\]\u\[\e[m\]@\[\e[1;32m\]\h\[\e[m\]: \[\e[1;36m\]\w\[\e[m\]]#"
            EOT
            source /etc/profile
            TOKEN=$(curl -sS -X PUT "http://169.254.169.254/latest/api/token" \
              -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")     #EC2 메타데이터 접근용 토큰 생성 (IMDSv2)
            RZAZ=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone-id)     #EC2의 Availability Zone ID 조회
            IID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)     #EC2 Instance ID 조회
            LIP=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4)     #EC2 Private IP 조회
            dnf install -y httpd php htop tmux     #Apache 웹서버 & PHP 실행 & 시스템 모니터링 & 터미널 세션관리 패키지 설치
            systemctl start httpd && systemctl enable httpd     #Apache 웹서버 실행 + 부팅 시 자동 실행
            echo "<h1>RegionAz($RZAZ) : Instance ID($IID) : Private IP($LIP) : Main Web-Soldesk</h1>" > /var/www/html/index.html     #index.html 웹페이지 생성
            curl -o /var/www/html/load.php https://cloudneta-book.s3.ap-northeast-2.amazonaws.com/chapter5/load.php --silent     #load 테스트용 PHP 파일 다운로드
            yum install -y php php-cli php-common php-fpm php-mysqlnd php-mbstring
            aws s3 cp s3://zxxnwood /var/www/html/ --recursive
    
Outputs:     #각 EC2 Public&Private IP 추출
  PublicEC21:
    Description: PUBLIC IP of TESTPublicEC21
    Value: !GetAtt TESTPublicEC21.PublicIp
  PublicEC22:
    Description: PUBLIC IP of TESTPublicEC22
    Value: !GetAtt TESTPublicEC22.PublicIp


이거 올렸을때 EC2에 웹서버도 설치 안됐고 (크롬에서 ip로 접속해도 연결 안됨)
/var/www/html안에 아무것도 없는데 이거 어케된거임?
